SET(STM32_CHIP STM32F103C8)
set(CMAKE_BUILD_TYPE Debug)
set(EXTRA_FIND_PATH /)
SET(CMAKE_TOOLCHAIN_FILE ~/cmake/stm32/gcc_stm32.cmake)
SET(CMAKE_MODULE_PATH ~/cmake/stm32/cmake)

PROJECT(emqtt)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)


FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
)


SET(PROJECT_SOURCES
    libemqtt.c
)

SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

add_library(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
